Bring back full height image instead of video.

--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -1,4 +1,4 @@
-<header class="home-intro">
+<header class="home-intro full-bg-banner">
 
   <section class="welcome">
     <span class="gradient"></span>
@@ -96,26 +96,3 @@
     </div>
   </div>
 </div>
-
-
-<script>
-// When ready...
-window.addEventListener("load",function() {
-  // Set a timeout...
-  setTimeout(function(){
-    // Hide the address bar!
-    window.scrollTo(0, 1);
-  }, 0);
-
-
-  $(function() {
-        var BV = new $.BigVideo();
-  BV.init();
-  BV.show(['/video/stock-footage-slow-motion-girl-running-at-sunset.mp4', '/video/stock-footage-runner-on-steps-city-hall-london-tower-bridge-in-background.mp4', '/video/stock-footage-concert-arena-stage-series-version-from-to-concert-collection-thing-different.mp4', '/video/stock-footage-slim-athletic-girl-in-silhouette-practicing-yoga-overlooking-the-beach-at-sunrise.mp4', '/video/stock-footage-concert-arena-stage-series-version-from-to-concert-collection-thing-different.mp4', '/video/stock-footage-dream-vacation-road-trip-driving-an-open-top-cabriolet.mp4' ], {ambient:true, doLoop: true});
-  });
-
-
-
-
-});
-</script>
