--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -25,29 +25,109 @@
 </header>
 
 <div class="content content-home" id="content">
-  <ol>
-    <li>
-      <div class="detail">
-        <img src="/img/time.png" class="pull-right" width="128" height="128" /><h2>Mere tid, mere lykke</h2>
+
+  <section>
+    <div>
+      <h3>Fokusér det der er vigtigt for dig</h3>
+
+      <div class="col-md-6">
         <p>I dag har 40% af Københavns familier en rengøringshjælp. Det var for ganske få årtier siden en luksus for overklassen, men i dag er det allemandseje fordi det frigører vigtig tid.</p>
-        <p>Tænk hvis du kunne frigøre endnu mere tid, ved at udlicitere alle de andre opgaver du ikke har tid til at løse. Tænk på hvad du kunne bruge al den tid på.</p>
       </div>
-    </li>
-    <li>
-      <div class="detail">
-        <img src="/img/assistant.png" class="pull-right" width="128" height="128" /><h2>Helpmate er din personlige assistent</h2>
-        <p>Tænk hvis du havde en personlig assistent eller sekretær til at løse alle de opgaver du ikke har tid til. Eller lyst til, for den sags skyld.</p>
-		<p>Vi giver dig en personlig assistent som du kan skrive til, ringe til eller sms'e til døgnet rundt, hver gang du har en opgave der trænger til at blive løst.</p>
+
+      <div class="col-md-6">
+        <p>Tænk hvis du kunne frigøre endnu mere tid, ved atudlicitere alle de andre opgaver du ikke har tid til at løse. Tænk på hvad du kunne bruge al den tid på.</p>
       </div>
-    </li>
-    <li>
-      <div class="detail">
-        <img src="/img/infinity.png" class="pull-right" width="128" height="128" /><h2>Mulighederne er uendelige</h2>
-        <p>Din Helpmate kan hente dine pakker på posthuset. Booke dig et hotelværelse. Skrive dit barn op til børnehave. Lave en aftale med fire af dine venner om at drikke en øl. Få nogen til at komme forbi og pudse dine vinduer. Finde en god tandlæge og booke dig en tid. Læse korrektur på dine mails. Skrive visitkort ind i din adressebog. Ringe til deltagerne på dit møde i morgen og bekræfte tid og sted. Sende blomster til din mor. Scanne din fysiske post ind til Evernote. Sammensætte en madplan på baggrund af hvad Nemlig.com har tilbud på. Finde et band der kan spille til den næste firmafest.</p>
-        <p>Muligheder for hvad du kan slippe for at lave er næsten uendelige.</p>
+    </div>
+  </section>
+
+  <section class="dark">
+    <div>
+      <h3>Bare send os en mail</h3>
+
+      <div class="col-md-6">
+        <p>Har du en bunke mails i din indbakke du aldrig har fået svaret? Bare videresend dem til din Helpmate, så kigger han på dem og får klaret dem i en fart..</p>
       </div>
-    </li>
-  </ol>
+
+      <div class="col-md-6">
+        <img height="200" width="200" src="..." alt="..." class="img-thumbnail">
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <h3>Tag ikke vores ord for det</h3>
+
+      <div class="col-md-6">
+        <p>Testimonial fra bruger #1, måske Anders Pollas?</p>
+      </div>
+
+      <div class="col-md-6">
+        <p>Testimonial fra bruger #2, måske Ritzau?</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="dark">
+    <div>
+      <h3>Vi holder styr på dine opgaver for dig</h3>
+
+      <div class="col-md-6">
+        <p>Er du i tvivl om din Helpmate har fået bestilt de der flybiletter til næste uge til dig? Bare log ind på helpmate.dk og få det kølige overblik.</p>
+      </div>
+
+      <div class="col-md-6">
+        <img height="200" width="200" src="..." alt="..." class="img-thumbnail">
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <h3>En-to-tre-aaah</h3>
+
+      <div class="col-md-4">
+        <p>1) Send os dine opgaver. Alt fra at booke tid hos frisøren til at scanne dine bilag.</p>
+      </div>
+
+      <div class="col-md-4">
+        <p>2) Følg status på at de bliver løst - hvis du gider. Ellers kan du bare læne dig tilbage.</p>
+      </div>
+
+      <div class="col-md-4">
+        <p>3) Du får en mail når opgaven er løst og du kan nu ånde lettet op. Aaah</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="dark">
+    <div>
+      <h3>Hej, vi hedder Jacob og Kenneth</h3>
+
+      <div class="col-md-6">
+        <p>Vi har begge alt for travlt og har bygget Helpmate til os selv. Vi håber du også kan få glæde af det</p>
+      </div>
+
+      <div class="col-md-6">
+        <img height="200" width="200" src="..." alt="..." class="img-thumbnail">
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <h3>Tag ikke vores ord for det</h3>
+
+      <div class="col-md-6">
+        <p>Testimonial fra bruger #1, måske Anders Pollas?</p>
+      </div>
+
+      <div class="col-md-6">
+        <p>Testimonial fra bruger #2, måske Ritzau?</p>
+      </div>
+    </div>
+  </section>
+
 </div>
 
 <footer class="home-footer">
