--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -28,14 +28,14 @@
 
   <section>
     <div>
-      <h3>Fokusér det der er vigtigt for dig</h3>
+      <h3>Fokusér på det der er vigtigt for dig</h3>
 
       <div class="col-md-6">
         <p>I dag har 40% af Københavns familier en rengøringshjælp. Det var for ganske få årtier siden en luksus for overklassen, men i dag er det allemandseje fordi det frigører vigtig tid.</p>
       </div>
 
       <div class="col-md-6">
-        <p>Tænk hvis du kunne frigøre endnu mere tid, ved atudlicitere alle de andre opgaver du ikke har tid til at løse. Tænk på hvad du kunne bruge al den tid på.</p>
+        <p>Tænk hvis du kunne frigøre endnu mere tid, ved at udlicitere alle de andre opgaver du ikke har tid til at løse. Tænk på hvad du kunne bruge al den tid på.</p>
       </div>
     </div>
   </section>
@@ -45,7 +45,8 @@
       <h3>Bare send os en mail</h3>
 
       <div class="col-md-8">
-        <p>Har du en bunke mails i din indbakke du aldrig har fået svaret? Bare videresend dem til din Helpmate, så kigger han på dem og får klaret dem i en fart..</p>
+        <p>Er din indbakke fyldt med ubesvarede mails? Bare videresend dem til Helpmate, så tager vi den derfra.</p>
+        <p>Har du ingen mails at videresende, så kan du bare sende os en ren mail med din opgave. Så klarer vi også den.</p>
       </div>
 
       <div class="col-md-4">
@@ -56,24 +57,24 @@
 
   <section>
     <div>
-      <h3>Tag ikke vores ord for det</h3>
+      <h3>Jeg tror ikke på jer. Hvad siger brugerne?</h3>
 
       <div class="col-md-6">
-        <p>Testimonial fra bruger #1, måske Anders Pollas?</p>
+        <p>"Helpmate hjalp med at køre min bil tur/retur på værksted, så jeg kunne lege med min søn imens i stedet for at glo på værkstedet"<br />–Anders Pollas - Co-founder, Podio</p>
       </div>
 
       <div class="col-md-6">
-        <p>Testimonial fra bruger #2, måske Ritzau?</p>
+        <p>"At være iværksætter og familiefar på samme tid er ikke nemt, men med Helpmate er det lidt nemmere"<br />–Christoffer Ritzau - Stifter, DNA</p>
       </div>
     </div>
   </section>
 
   <section class="dark">
     <div>
-      <h3>Vi holder styr på dine opgaver for dig</h3>
+      <h3>Har I modtaget min opgave?</h3>
 
       <div class="col-md-8">
-        <p>Er du i tvivl om din Helpmate har fået bestilt de der flybiletter til næste uge til dig? Bare log ind på helpmate.dk og få det kølige overblik.</p>
+        <p>Er du i tvivl om din Helpmate har fået bestilt de der flybiletter til dig? Bare log ind på helpmate.dk og få et nemt overblik. Her kan du se status på alle dine opgaver og evt. besvare opklarende spørgsmål.</p>
       </div>
 
       <div class="col-md-4">
@@ -87,15 +88,15 @@
       <h3>En-to-tre-aaah</h3>
 
       <div class="col-md-4">
-        <p>1) Send os dine opgaver. Alt fra at booke tid hos frisøren til at scanne dine bilag.</p>
+        <p>1) Send os dine opgaver. Det kan være alt fra at booke tid hos frisøren til at scanne dine bilag.</p>
       </div>
 
       <div class="col-md-4">
-        <p>2) Følg status på at de bliver løst - hvis du gider. Ellers kan du bare læne dig tilbage.</p>
+        <p>2) Følg status på at opgaverne bliver løst, hvis du gider, ellers kan du bare læne dig tilbage.</p>
       </div>
 
       <div class="col-md-4">
-        <p>3) Du får en mail når opgaven er løst og du kan nu ånde lettet op. Aaah</p>
+        <p>3) Du får en mail når opgaven er løst og du kan nu ånde lettet op. Aaah.</p>
       </div>
     </div>
   </section>
@@ -105,7 +106,7 @@
       <h3>Hej, vi hedder Jacob og Kenneth</h3>
 
       <div class="col-md-8">
-        <p>Vi har begge alt for travlt og har bygget Helpmate til os selv. Vi håber du også kan få glæde af det</p>
+        <p>Vi har begge alt for travlt og har derfor bygget Helpmate til os selv. Vi håber du også kan få glæde af at frigive tid i din hverdag.</p>
       </div>
 
       <div class="col-md-4">
@@ -116,14 +117,14 @@
 
   <section>
     <div>
-      <h3>Tag ikke vores ord for det</h3>
+      <h3>Vi er i beta</h3>
 
       <div class="col-md-6">
-        <p>Testimonial fra bruger #1, måske Anders Pollas?</p>
+        <p>Vi bygger Helpmate i vores fritid og har ingen ekstern finansiering, det betyder at vi gerne vil vokse langsomt her i starten. Vi har derfor kun givet en mindre gruppe mennesker adgang til platformen for at sørge for at de altid kan få svar på deres opgaver.</p>
       </div>
 
       <div class="col-md-6">
-        <p>Testimonial fra bruger #2, måske Ritzau?</p>
+        <p>Vi udvider løbende antallet af betabrugere og de betaler alle en fast månedlig pris for at være med. Vi er dog ikke sikre på at det er den rette måde at gøre det på og derfor kommunikerer vi ikke en pris før vi er sikre på hvad det skal koste.</p>
       </div>
     </div>
   </section>
