Flere nye tekster

--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -107,6 +107,8 @@
 
       <div class="col-md-8">
         <p>Vi har begge alt for travlt og har derfor bygget Helpmate til os selv. Vi håber du også kan få glæde af at frigive tid i din hverdag.</p>
+        <p>Kenneth er software-udvikler hos den danske start-up Podio og ville hellere bruge tid på at <a href="https://www.facebook.com/photo.php?fbid=10151719589632070&set=t.651692069&type=1&theater">kysse Laura Jul</a> end at hente pakker på posthuset.</p>
+        <p>Jacob er iværksætter med forskellige virksomheder og ville hellere på legepladsen med sin søn end at scanne bilag ind i sit regnskabsprogram.</p>
       </div>
 
       <div class="col-md-4">
