A bit of spacing in the frontpage layout

--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -134,6 +134,7 @@
 
     padding: 30px;
     overflow: hidden;
+    position: relative;
 
     .col-md-8,
     .col-md-6,
@@ -144,6 +145,15 @@
     > div {
      margin:0 auto;
      max-width: 940px;
+    }
+
+    .figure {
+      position: absolute;
+      top: -50px;
+    }
+
+    img {
+      margin-bottom: 20px;
     }
 
     &.dark {
