--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -50,7 +50,7 @@
       </div>
 
       <div class="col-md-4">
-        <img height="200" width="200" src="..." alt="..." class="img-thumbnail">
+        <img height="200" width="200" src="http://placehold.it/200x200" alt="..." class="figure img-thumbnail">
       </div>
     </div>
   </section>
@@ -78,7 +78,7 @@
       </div>
 
       <div class="col-md-4">
-        <img height="200" width="200" src="..." alt="..." class="img-thumbnail">
+        <img height="200" width="200" src="http://placehold.it/200x200" alt="..." class="figure img-thumbnail">
       </div>
     </div>
   </section>
@@ -88,14 +88,17 @@
       <h3>En-to-tre-aaah</h3>
 
       <div class="col-md-4">
+        <img height="200" width="200" src="http://placehold.it/200x200" alt="..." class="img-thumbnail">
         <p>1) Send os dine opgaver. Det kan være alt fra at booke tid hos frisøren til at scanne dine bilag.</p>
       </div>
 
       <div class="col-md-4">
+        <img height="200" width="200" src="http://placehold.it/200x200" alt="..." class="img-thumbnail">
         <p>2) Følg status på at opgaverne bliver løst, hvis du gider, ellers kan du bare læne dig tilbage.</p>
       </div>
 
       <div class="col-md-4">
+        <img height="200" width="200" src="http://placehold.it/200x200" alt="..." class="img-thumbnail">
         <p>3) Du får en mail når opgaven er løst og du kan nu ånde lettet op. Aaah.</p>
       </div>
     </div>
@@ -112,7 +115,7 @@
       </div>
 
       <div class="col-md-4">
-        <img height="200" width="200" src="..." alt="..." class="img-thumbnail">
+        <img height="200" width="200" src="http://placehold.it/200x200" alt="..." class="figure img-thumbnail">
       </div>
     </div>
   </section>
