--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -50,7 +50,7 @@
       </div>
 
       <div class="col-md-4">
-        <img height="200" width="200" src="..." alt="..." class="img-thumbnail">
+        <img height="250" width="188" src="/img/iphone.png" alt="Bare send os en mail" class="img-thumbnail">
       </div>
     </div>
   </section>
