--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -80,7 +80,7 @@
       </div>
 
       <div class="col-md-4">
-        <img height="200" width="200" src="http://placehold.it/200x200" alt="..." class="figure img-thumbnail">
+        <img height="150" width="279" src="/img/macbook.png" alt="Har I modtaget min opgave?" class="figure img-thumbnail">
       </div>
     </div>
   </section>
