--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -179,12 +179,17 @@
         font-family: "freight-sans-pro";
       }
 
+      h3{
+        font-family: "freight-sans-pro";
+      }
+
       p{
         font-size: 16px;
         line-height:1.4em;
         color: #999;
         font-weight:500;
         margin-top:1em;
+        font-family: "freight-sans-pro";
       }
 
     }
