--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -62,11 +62,11 @@
       <h3>Jeg tror ikke på jer. Hvad siger brugerne?</h3>
 
       <div class="col-md-6">
-        <p>"Helpmate hjalp med at køre min bil tur/retur på værksted, så jeg kunne lege med min søn imens i stedet for at glo på værkstedet"<br />–Anders Pollas - Co-founder, Podio</p>
+        <p>"Helpmate hjalp med at køre min bil tur/retur på værksted, så jeg kunne lege med min søn imens i stedet for at glo på værkstedet"<br />-Bruger 1</p>
       </div>
 
       <div class="col-md-6">
-        <p>"At være iværksætter og familiefar på samme tid er ikke nemt, men med Helpmate er det lidt nemmere"<br />–Christoffer Ritzau - Stifter, DNA</p>
+        <p>"At være iværksætter og familiefar på samme tid er ikke nemt, men med Helpmate er det lidt nemmere"<br />–Bruger 2</p>
       </div>
     </div>
   </section>
